--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "homepage": "http://jbcznsk.github.io/persephone",
   "name": "persephone",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -18,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy" : "npm run build",
-    "deply" : "gh-pages -d build",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
